--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -22,6 +22,15 @@
   transition: 0.3s;
 }
 
+.sidenav a .text-small{
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #353535;
+  display: block;
+  transition: 0.3s;
+}
+
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: #f1f1f1;
