--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -22,11 +22,11 @@
   transition: 0.3s;
 }
 
-.sidenav a .text-small{
+.sidenav a .small{
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 15px;
-  color: #353535;
+  color: #01ffaa;
   display: block;
   transition: 0.3s;
 }
@@ -55,4 +55,8 @@
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+.small{
+  font-size: 15px !important;
 }
